// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload Studio CMS assets on push of Studio enabled project able to generate and upload Codegen model artifacts for schema with connected PK 1`] = `
"type Post @model {
  postId: ID! @primaryKey
  node: PostNode! @belongsTo(fields: [\\"postId\\"])
  title: String!
}

type PostNode @model {
  id: ID!
  post: Post! @hasOne
}
"
`;

exports[`upload Studio CMS assets on push of Studio enabled project able to generate and upload Codegen model artifacts for schema with connected PK 2`] = `
"export const schema = {
    \\"models\\": {
        \\"Post\\": {
            \\"name\\": \\"Post\\",
            \\"fields\\": {
                \\"postId\\": {
                    \\"name\\": \\"postId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"node\\": {
                    \\"name\\": \\"node\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"PostNode\\"
                    },
                    \\"isRequired\\": true,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"postId\\"
                        ]
                    }
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Posts\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"postId\\"
                        ]
                    }
                }
            ]
        },
        \\"PostNode\\": {
            \\"name\\": \\"PostNode\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"post\\": {
                    \\"name\\": \\"post\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Post\\"
                    },
                    \\"isRequired\\": true,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_ONE\\",
                        \\"associatedWith\\": [
                            \\"postId\\"
                        ],
                        \\"targetNames\\": [
                            \\"postNodePostPostId\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"postNodePostPostId\\": {
                    \\"name\\": \\"postNodePostPostId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"PostNodes\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ]
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {},
    \\"codegenVersion\\": \\"3.4.0\\",
    \\"version\\": \\"fafa7133cfec88f3e9d66076b888372a\\"
};"
`;

exports[`upload Studio CMS assets on push of Studio enabled project able to generate and upload Codegen model artifacts for schema with connected PK 3`] = `
"{
    \\"version\\": 1,
    \\"models\\": {
        \\"Post\\": {
            \\"name\\": \\"Post\\",
            \\"fields\\": {
                \\"postId\\": {
                    \\"name\\": \\"postId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"node\\": {
                    \\"name\\": \\"node\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"PostNode\\"
                    },
                    \\"isRequired\\": true,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"BELONGS_TO\\",
                        \\"targetNames\\": [
                            \\"postId\\"
                        ]
                    }
                },
                \\"title\\": {
                    \\"name\\": \\"title\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Posts\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                },
                {
                    \\"type\\": \\"key\\",
                    \\"properties\\": {
                        \\"fields\\": [
                            \\"postId\\"
                        ]
                    }
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": true,
                \\"primaryKeyFieldName\\": \\"postId\\",
                \\"sortKeyFieldNames\\": []
            }
        },
        \\"PostNode\\": {
            \\"name\\": \\"PostNode\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"post\\": {
                    \\"name\\": \\"post\\",
                    \\"isArray\\": false,
                    \\"type\\": {
                        \\"model\\": \\"Post\\"
                    },
                    \\"isRequired\\": true,
                    \\"attributes\\": [],
                    \\"association\\": {
                        \\"connectionType\\": \\"HAS_ONE\\",
                        \\"associatedWith\\": [
                            \\"postId\\"
                        ],
                        \\"targetNames\\": [
                            \\"postNodePostPostId\\"
                        ]
                    }
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"postNodePostPostId\\": {
                    \\"name\\": \\"postNodePostPostId\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"PostNodes\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {}
}"
`;

exports[`upload Studio CMS assets on push of Studio enabled project uploads expected CMS assets to shared location in S3 bucket 2`] = `
"export const schema = {
    \\"models\\": {
        \\"Todo\\": {
            \\"name\\": \\"Todo\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"content\\": {
                    \\"name\\": \\"content\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todos\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ]
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {},
    \\"codegenVersion\\": \\"3.4.0\\",
    \\"version\\": \\"6f85ca0ee370ac8e0674a44cc5a4f6a6\\"
};"
`;

exports[`upload Studio CMS assets on push of Studio enabled project uploads expected CMS assets to shared location in S3 bucket 3`] = `
"{
    \\"version\\": 1,
    \\"models\\": {
        \\"Todo\\": {
            \\"name\\": \\"Todo\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"content\\": {
                    \\"name\\": \\"content\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todos\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {}
}"
`;
